--- a/startbootstrap-business-frontpage/ihc/ong.html
+++ b/startbootstrap-business-frontpage/ihc/ong.html
@@ -79,6 +79,11 @@
                                 <div class="invalid-feedback" data-sb-feedback="date2:required">Data de término é obrigatório</div>
                             </div>
                             <div class="form-floating mb-3">
+                                <input class="form-control" id="endereco" type="text" placeholder="Endereço..." data-sb-validations="required"></input>
+                                <label for="endereco">Endereço</label>
+                                <div class="invalid-feedback" data-sb-feedback="endereco:required">Endereço é obrigatório</div>
+                            </div>
+                            <div class="form-floating mb-3">
                                 <textarea class="form-control" id="description" type="text" placeholder="Insira uma descrição do evento..." style="height: 10rem" data-sb-validations="required"></textarea>
                                 <label for="description">Descrição do Evento</label>
                                 <div class="invalid-feedback" data-sb-feedback="description:required">Descrição do evento é obrigatório.</div>
